spectec/test/elab/neg/ctx-metavar-redefined.spectec
;; Triggers ctx/ctx.ml:200 — declaring the same meta-variable twice.

var x : nat
var x : int
